--- a/src/fxml/Sanitation.fxml
+++ b/src/fxml/Sanitation.fxml
@@ -3,16 +3,30 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitMenuButton?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="156.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DepartmentSubsystem.Services.Controllers.SanitationController">
+<AnchorPane prefHeight="150.0" prefWidth="1279.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DepartmentSubsystem.Services.Controllers.SanitationController">
    <children>
-      <SplitMenuButton fx:id="sanitationMenu" layoutX="223.0" layoutY="54.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="154.0" text="Sanitation Service">
-        <items>
-          <MenuItem fx:id="roomPrep" mnemonicParsing="false" onAction="#sanitationSelected" text="Room Preparation" />
-          <MenuItem fx:id="bathRestock" mnemonicParsing="false" onAction="#sanitationSelected" text="Bathroom Restock" />
-            <MenuItem fx:id="roomClean" mnemonicParsing="false" onAction="#sanitationSelected" text="Room Cleaning" />
-            <MenuItem fx:id="generalClean" mnemonicParsing="false" onAction="#sanitationSelected" text="General Cleaning" />
-        </items>
-      </SplitMenuButton>
+      <GridPane prefHeight="150.0" prefWidth="1279.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <SplitMenuButton fx:id="sanitationMenu" mnemonicParsing="false" onAction="#sanitationSelected" prefHeight="47.0" prefWidth="154.0" text="Sanitation Service" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+              <items>
+                <MenuItem fx:id="roomPrep" mnemonicParsing="false" onAction="#sanitationSelected" text="Room Preparation" />
+                <MenuItem fx:id="bathRestock" mnemonicParsing="false" onAction="#sanitationSelected" text="Bathroom Restock" />
+                  <MenuItem fx:id="roomClean" mnemonicParsing="false" onAction="#sanitationSelected" text="Room Cleaning" />
+                  <MenuItem fx:id="generalClean" mnemonicParsing="false" onAction="#sanitationSelected" text="General Cleaning" />
+              </items>
+            </SplitMenuButton>
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
