--- a/src/fxml/Translation.fxml
+++ b/src/fxml/Translation.fxml
@@ -1,25 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="200.0" prefWidth="372.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DepartmentSubsystem.Services.Controllers.Translation">
+<AnchorPane prefHeight="150.0" prefWidth="1279.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DepartmentSubsystem.Services.Controllers.TranslationController">
    <children>
-      <MenuButton fx:id="languageDropDown" layoutX="117.0" layoutY="45.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="146.0" text="Language">
-        <items>
-          <MenuItem fx:id="spanish" mnemonicParsing="false" onAction="#languagePicked" text="Spanish" />
-            <MenuItem fx:id="czech" mnemonicParsing="false" onAction="#languagePicked" text="Czech" />
-            <MenuItem fx:id="russian" mnemonicParsing="false" onAction="#languagePicked" text="Russian" />
-            <MenuItem fx:id="hindi" mnemonicParsing="false" onAction="#languagePicked" text="Hindi" />
-        </items>
-      </MenuButton>
-      <JFXTextField fx:id="durationTextFiled" labelFloat="true" layoutX="74.0" layoutY="142.0" promptText="Duration (Min)">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </JFXTextField>
+      <GridPane prefHeight="186.0" prefWidth="1279.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <MenuButton fx:id="languageDropDown" mnemonicParsing="false" prefHeight="44.0" prefWidth="146.0" text="Language" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+              <items>
+                <MenuItem fx:id="spanish" mnemonicParsing="false" onAction="#languagePicked" text="Spanish" />
+                  <MenuItem fx:id="czech" mnemonicParsing="false" onAction="#languagePicked" text="Czech" />
+                  <MenuItem fx:id="russian" mnemonicParsing="false" onAction="#languagePicked" text="Russian" />
+                  <MenuItem fx:id="hindi" mnemonicParsing="false" onAction="#languagePicked" text="Hindi" />
+              </items>
+            </MenuButton>
+            <JFXTextField fx:id="durationTextFiled" labelFloat="true" promptText="Duration (Min)" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+               <font>
+                  <Font size="20.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="250.0" right="250.0" />
+               </GridPane.margin>
+            </JFXTextField>
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
