--- a/src/fxml/Translation.fxml
+++ b/src/fxml/Translation.fxml
@@ -2,8 +2,7 @@
 
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -22,14 +21,6 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <MenuButton fx:id="languageDropDown" mnemonicParsing="false" prefHeight="44.0" prefWidth="146.0" text="Language" GridPane.columnIndex="1" GridPane.halignment="CENTER">
-              <items>
-                <MenuItem fx:id="spanish" mnemonicParsing="false" onAction="#languagePicked" text="Spanish" />
-                  <MenuItem fx:id="czech" mnemonicParsing="false" onAction="#languagePicked" text="Czech" />
-                  <MenuItem fx:id="russian" mnemonicParsing="false" onAction="#languagePicked" text="Russian" />
-                  <MenuItem fx:id="hindi" mnemonicParsing="false" onAction="#languagePicked" text="Hindi" />
-              </items>
-            </MenuButton>
             <JFXTextField fx:id="durationTextFiled" labelFloat="true" promptText="Duration (Min)" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <font>
                   <Font size="20.0" />
@@ -38,6 +29,7 @@
                   <Insets left="250.0" right="250.0" />
                </GridPane.margin>
             </JFXTextField>
+            <ChoiceBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
          </children>
       </GridPane>
    </children>
