Tried to connect the About page to the rest of the UI, but failed when adding the file in Main

--- a/src/fxml/Main.fxml
+++ b/src/fxml/Main.fxml
@@ -165,6 +165,11 @@
                   </TitledPane>
                </children>
             </HBox>
+            <JFXButton fx:id="aboutButton" onAction="#aboutButtonPressed" text="About" textFill="WHITE" AnchorPane.bottomAnchor="110.0" AnchorPane.rightAnchor="20.0">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </JFXButton>
          </children></AnchorPane>
    </children>
 </Pane>
